# ayda

./: .gitignore  404.html  Cargo.toml  README.md  collections.json  document_upload.json  index.html  mkdocs.yml  workspace_new.json
commands/: index.html
docs/: commands.md  index.md  installation.md  zotero.md
examples/: get_collections.rs  get_items.rs  get_llm_docs.rs  get_zotero_collections.rs  get_zotero_items.rs
installation/: index.html
search/: search_index.json
src/: error.rs  lib.rs  main.rs
src/anythingllm/: client.rs  error.rs  mod.rs
src/anythingllm/api/: documents.rs  mod.rs  workspaces.rs
src/anythingllm/documents/: api.rs  endpoint.rs  mod.rs  models.rs
src/anythingllm/models/: document.rs  mod.rs  workspace.rs
src/anythingllm/workspace/: api.rs  endpoint.rs  mod.rs  models.rs
src/app/: error.rs  mod.rs
src/app/commands/: admin.rs  document.rs  mod.rs  workspace.rs  zotero.rs
src/app/commands/workspace/: chat.rs  create.rs  delete.rs  import.rs  list.rs  mod.rs
src/app/commands/zotero/: enhance.rs  list.rs  mod.rs
src/zotero/: client.rs  error.rs  mod.rs
src/zotero/api/: collections.rs  item.rs  mod.rs
src/zotero/api/endpoints/: collections.rs  item.rs  items.rs  mod.rs
src/zotero/api/models/: collection.rs  item.rs
src/zotero/collection/: endpoint.rs  mod.rs  models.rs
src/zotero/item/: endpoint.rs  mod.rs  model.rs  models.rs
src/zotero/models/: collection.rs  item.rs  mod.rs
tests/: test_anythingllm.rs  test_app.bak  test_app.rs  test_pdf_title.rs  test_workspace.rs  test_zotero.rs
tests/common/: mod.rs
tests/responses/: getDocuments.json  postWorkspaceNew.json
tests/responses/AnythingLLM/: get_workspace.json  get_workspaces.json  post_document_upload.json  post_multipart_raw.json  post_workspace_slug_chat.json
tests/responses/Zotero/: get_collections.json  get_items.json
zotero/: index.html
