[package]
name = "zotero-llm"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.11.24", features = ["json", "multipart"] }
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
serde_json = "1.0.114"
regex = "1.10.3"
thiserror = "1.0.57"
chrono = "0.4.35"
