[package]
name = "zot2llm"
version = "0.1.0"
edition = "2021"
description = "A tool for loading Zotero documents into a Large Language Model."

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.11.24", features = ["json", "multipart"] }
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
serde_json = "1.0.114"
regex = "1.10.3"
thiserror = "1.0.57"
clap = { version = "4.5.2", features = ["derive"] }
chrono = "0.4.35"

